# orka

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cli.yaml  controller.yaml  rust-ci.yaml  scheduler.yaml
cli/: Cargo.toml
cli/examples/: c.yaml  container.yaml  network.yaml
cli/src/: display.rs  handler.rs  main.rs
cli/src/args/: config.rs  crud.rs  mod.rs
cli/src/config/: mod.rs
cli/src/default_config/: mod.rs
cli/src/workloads/: container.rs  file.rs  mod.rs  network.rs
controller/: .gitignore  Cargo.toml  README.md  build.rs
controller/.db/db_data/: db  snap.0000000000000ECE
controller/src/: client.rs  dbstore.rs  errors.rs  lib.rs  main.rs  server.rs
controller/src/routes/: instances.rs  mod.rs  workloads.rs
controller/src/routes/workloads/: controller.rs
controller/src/store/: kv_manager.rs  mod.rs
controller/src/types/: Instance_Request.rs  Workload_Request.rs  instance_request.rs  instance_status.rs  mod.rs  workload_request.rs
docs/: README.md
docs/proposals/cli/: README.md
docs/proposals/controller/: README.md  api_definition.yaml  scheduler.proto
docs/proposals/network/: README.md
docs/proposals/node-agent/: README.md  agent.proto  workload.md
docs/proposals/scheduler/: README.md  agent.proto  controller.proto
network/: .gitignore  Cargo.toml  Makefile  README.md  build_linux.sh
network/Documentation/: bridge.md  host-local.md
network/bridge/: Cargo.toml  bridge.conf
network/bridge/src/: lib.rs  main.rs
network/bridge/src/cni/: mod.rs
network/bridge/src/links/: bridge.rs  link.rs  utils.rs  veth.rs
network/documentation/: bridge_plugin.md  path.env  subnet.env
network/examples/: 10-orka-cni.conf  10-orknet.conf
network/host-local/: Cargo.toml  host-local.conf
network/orka-cni/: 10-orknet.conf  Cargo.toml
network/orka-cni/src/: lib.rs  main.rs
network/plugins/bridge/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  bridge.conf  docker-compose.yml
network/plugins/bridge/src/: delegation.rs  ipam.rs  lib.rs  main.rs  netns.rs  route.rs  types.rs
network/plugins/bridge/src/links/: bridge.rs  link.rs  mod.rs  utils.rs  veth.rs
network/plugins/bridge/test/: Dockerfile  bridge.conf  docker-compose.yml  run.sh
network/plugins/host-local/: Cargo.toml  README.md  host-local.conf
network/plugins/host-local/src/: allocator.rs  cni_error.rs  config.rs  main.rs  types.rs
network/plugins/host-local/src/commands/: cni_add.rs  cni_check.rs  cni_del.rs
network/plugins/loopback/: Cargo.toml
network/plugins/orka-cni/: 10-orknet.conf  Cargo.toml  Makefile
network/plugins/orka-cni/src/: delegate_conf.rs  delegation.rs  lib.rs  main.rs  plugins.rs
network/plugins/orka-cni/src/commands/: add.rs  del.rs  mod.rs
network/src/: .env  cni_config.rs  lib.rs  main.rs  subnet.env
network/src/cni/: commands.rs  error.rs  method.rs  mod.rs  net_conf.rs  result.rs  skel.rs  types.rs
network/src/plugins/: bridge.rs  mod.rs
node-agent/: Cargo.toml  build.rs
node-agent/src/: args.rs  main.rs
node-agent/src/workload_manager/: mod.rs
node-agent/src/workload_manager/container/: client.rs  error.rs  mod.rs
node-agent/src/workload_manager/container/metrics/: metrics.proto  metrics.rs
node-agent/src/workload_manager/grpc/: mod.rs  scheduler_workload_service.rs  server.rs
node-agent/src/workload_manager/node/: metrics.rs
node-agent/workload-manager/: Cargo.toml
node-agent/workload-manager/src/: lib.rs
node-agent/workload-manager/src/container/: client.rs  error.rs
node-agent/workload-manager/src/namespace/: client.rs  error.rs
node-agent/workload-manager/src/workload_manager/container/: client.rs  error.rs
node-agent/workload-manager/src/workload_manager/namespace/: error.rs
proto/: Cargo.toml  build.rs  scheduler.proto
proto/src/: lib.rs
proto/src/node-agent/: agent.proto
proto/src/scheduler/: agent.proto  controller.proto  mappers.rs
scheduler/: Cargo.toml
scheduler/src/: args.rs  main.rs
scheduler/src/grpc/: agent_lifecycle_service.rs  agent_status_update_service.rs  controller_scheduling_service.rs  errors.rs  mod.rs  server.rs
scheduler/src/managers/: mod.rs
scheduler/src/managers/node_agent/: errors.rs  manager.rs  metrics.rs  mod.rs
scheduler/src/managers/workload/: errors.rs  manager.rs  mod.rs
scheduler/src/tls/: config.rs  manager.rs  mod.rs
