[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
colored = "2.0.4"
home = "0.5.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.19", features = ["default", "json"] }
regex = "1.9.3"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "1.0.47"
validator = { version = "0.12", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }