[package]
name = "orka-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
tokio-stream = "0.1.6"
serde_json = "1.0.104"
serde = {version = "1.0", features = ["derive"] }
validator = "0.16.1"

[dependencies.syn]
version = "2.0.28"


[build-dependencies]
tonic-build = "0.9"

[[bin]]
name= "server"
path= "src/server.rs"

[[bin]]
name= "client"
path= "src/client.rs"


