[package]
name = "orka-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
tokio-stream = "0.1.6"
serde_json = "1.0.104"
serde = {version = "1.0", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.47"
pretty_env_logger = "0.5.0"
log = "0.4.20"

[dependencies.syn]
version = "2.0.28"

[build-dependencies]
tonic-build = "0.9"
