[package]
name = "orka-node-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
containerd-client = { git = "https://github.com/containerd/rust-extensions", tag = "client-v0.4.0" }
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
orka-proto = { path = "../proto" }
serde_json = "1.0.105"
sysinfo = "0.29.8"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
clap = { version = "4.4.0", features = ["env", "derive"] }
tracing = "0.1.37"
clap-verbosity-flag = "2.0.1"
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
uuid = { version = "1.4.1", features = ["v4", "macro-diagnostics", "fast-rng"] }
tower-http = { version = "0.4.3", features = ["trace"] }

[build-dependencies]
tonic-build = "0.9.2"
tokio = { version = "1.0.0", features = ["full"] }
