[package]
name = "orka-scheduler"
description = "Scheduler service for the Orka container orchestration system"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.19"
orka-proto = { path = "../proto" }
prost = "0.11.9"
prost-types = "0.11.9"
rcgen = "0.11.1"
time = "0.3.25"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["transport", "codegen", "tls", "prost"] }
