[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# cni-plugin = "0.2"
derivative = "2.2.0"
futures = "0.3.28"
nix = "0.26.2"
rtnetlink = "0.13.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
