[package]
name = "workload-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
containerd-client = {git = "https://github.com/containerd/rust-extensions", branch="main"}
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
