[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
cni-plugin = { version = "0.2", features = ["with-tokio"] }
digest = "0.10.7"
futures = "0.3.28"
libc = "0.2.147"
log = "0.4.20"
nix = "0.26.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rtnetlink = "0.13.1"
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["full"] }
which = "4.4.0"
